# hell_yeah_opengl

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  glad.c  main.cpp  shader.cpp  shader.h  window.cpp  window.h
shaders/: fragment_1.glsl  vertex_1.glsl
utils/: debug.h  default.h  stb_image.h
